[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/bird/BirdSprite.png" type="Texture" id=1]
[ext_resource path="res://scripts/objects/player.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/fall.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/swoosh.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/wing.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/hit.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "fly"
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=2]
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.88639, 3.75573 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( -8.08867, 0.619402 )
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
flip_h = true
vframes = 3
hframes = 8
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fly"
anims/fly = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0728683, 0.947322 )
shape = SubResource( 3 )

[node name="FallTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="FallSoundTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="Swoosh" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )

[node name="Wing" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )

[node name="Falling" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )

[node name="Smash" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
[connection signal="falling" from="." to="." method="_on_Player_falling"]
[connection signal="smash" from="." to="." method="_on_Player_smash"]
[connection signal="start_flying" from="." to="." method="_on_Player_start_flying"]
[connection signal="timeout" from="FallTimer" to="." method="_on_FallTimer_timeout"]
[connection signal="timeout" from="FallSoundTimer" to="." method="_on_FallTimer_timeout"]
[connection signal="timeout" from="FallSoundTimer" to="." method="_on_FallSoundTimer_timeout"]
